<resources>
    <string name="app_name">Music On</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_song_track"><b>Love me back ·</b> The Weeknd</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="song_playlist">Song Playlist</string>
    <string name="recent_played">Recent Played</string>
    <string name="local">Local</string>
    <string name="internal_storage">Internal storage</string>
    <string name="sd_card">SD card</string>
    <string name="add">add</string>
    <string name="general">General</string>
    <string name="auto_play">Auto Play</string>
    <string name="auto_play_dis">Enable or disable auto play</string>
    <string name="themes">Themes</string>
    <string name="theme_dis">Choose theme for the app</string>
    <string name="help_us">Help us</string>
    <string name="share">Share</string>
    <string name="share_app">Share this app with your friends.</string>
    <string name="rate">Rate Us</string>
    <string name="rate_it">Rate and comment app</string>
    <string name="feedback">Feedback</string>
    <string name="feedbacks">Give feedback and suggest about this app</string>
    <string name="more">More Information</string>
    <string name="privacy">Privacy Policy</string>
    <string name="policy_app">See the Privacy Policy of app</string>
    <string name="developer">Developers</string>
    <string name="more_apps">More Apps</string>
    <string name="sees">See our other apps</string>
    <string name="powered_by_flax_studio">Powered by Flax Studio</string>
</resources>