<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- AppBar layout for using Toolbar as AppBar -->

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageButton

                android:id="@+id/settingsBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:padding="8dp"
                android:src="@drawable/icon_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settingsBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/Home"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/title_bar_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555" />

                <ImageButton

                    android:id="@+id/settingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="#00FFFFFF"
                    android:padding="8dp"
                    android:src="@drawable/icon_setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorSecondary" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/icon_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorSecondary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/song_playlist"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/main_heading"
            android:textStyle="normal" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <include
                    layout="@layout/home_playlist_box"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp" />

                <include
                    layout="@layout/home_playlist_box"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp" />

                <include
                    layout="@layout/home_playlist_box"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp" />

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/home_playlist_background">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="28dp"
                        android:layout_marginBottom="28dp"
                        android:contentDescription="@string/add"
                        android:src="@drawable/icon_add" />
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/recent_played"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/main_heading"
            android:textStyle="normal" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:listitem="@layout/music_play_track_layout">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/colorSurface"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/local"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/main_heading"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorSurface"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/storage_container_rounded"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/internal_storage"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/storage_container_rounded"
                android:paddingLeft="24dp"
                android:paddingTop="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/sd_card"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>